# vscode-cmake-tools

./: .clang-format  .editorconfig  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .mcp.json  .npmrc  .travis.yml  .vscodeignore  .yarnrc  As I was studying the documentation mark.md  CHANGELOG.md  CHANGELOG.pre-0.11.0.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTION_REPORT.md  COPILOT_CASE_STUDIES.md  COPILOT_PR_TRACKING.md  CodeQL.yml  EXTENSIBILITY.md  NOTICE.txt  README.md  ThirdPartyNotices.txt  appveyor.yml  azure-pipelines.yml  cgmanifest.json  cmake-tools-0.11.0-beta4.vsix  gulpfile.js  newrelic.js  package-lock.json  package.json  package.nls.json  tatys  test.tsconfig.json  translations_auto_pr.js  tsconfig-docs.json  tsconfig.json  tslint.json  webpack.config.js
.autogit/logs/: log-21-0-2021-7-20-15.txt  log-21-0-2021-7-50-32.txt  log-21-0-2021-8-20-49.txt  log-21-0-2021-8-56-27.txt  log-21-0-2021-9-26-43.txt
.config/1espt/: PipelineAutobaseliningConfig.yml
.config/guardian/: .gdnbaselines
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  copilot-test-coverage.md
.github/ISSUE_TEMPLATE/: 1_new_bug.yml  bugreport.yml  config.yml  docrequest.yml  featurerequest.yml
.github/PULL_REQUEST_TEMPLATE/: coverage.md
.github/actions/: .gitignore  package.json  tsconfig.json
.github/instructions/: copilot-test-coverage.instructions.md
.github/prompts/: add-command.prompt.md  add-diagnostic-parser.prompt.md  add-setting.prompt.md  presets-vs-kits.prompt.md  write-backend-test.prompt.md
.github/scripts/: check-coverage-and-open-issue.mjs
.github/workflows/: build-vsix.yml  ci-develop-linux.yml  ci-develop-mac.yml  ci-develop-win.yml  ci-develop.yml  ci-main-linux.yml  ci-main-mac.yml  ci-main.win.yml  close-old-issues.yml  close-stale-issues.yml  closed-fixed-pending-release.yml  copilot-setup-steps.yml  coverage-agent.yml  digest.yml  fix-dependabot.yml  generate-docs.yml  locker.yml  more-info-needed-closer.yml  nitpicker.yml  pr-into-rel.yml  question-closer.yml  test-bot.yml  triage-labels.yml
api/: api.ts  package.json  tsconfig.json
assets/: commands.json  modules.json  policies.json  variables.json
docs/: README.md  __conf.py  build.md  build_variants.md  building.rst  cache_editor.md  changelog.md  changelog.rst  cmake-options-configuration.md  cmake-presets.md  cmake-project-view.md  cmake-settings.md  cmake_server.md  common_issues.rst  configuration.md  configure.md  configuring.rst  contribute.md  debug-launch.md  debug.md  debugging.rst  development.rst  faq.md  faq.rst  getting_started.rst  how-to.md  how_do_i.rst  index.rst  issue_template.md  kits.md  kits.rst  pull_request_template.md  quickstart.md  settings.rst  target_debugging.md  tasks.md  troubleshoot.md  troubleshooting.rst  variants.md  variants.rst
docs/images/: add-configure-preset-vscode.zzz  command-palette.zzz
jobs/: build.windows.yml  cg.yml  policheckExclusions.xml  prerelease.yml  release.yml
res/: generate_product_icon_font.py
schemas/: CMakePresets-schema-v3.json  CMakePresets-schema.json  CMakePresets-v10-schema.json  CMakePresets-v11-schema.json  CMakePresets-v3-schema.json  CMakePresets-v4-schema.json  CMakePresets-v5-schema.json  CMakePresets-v6-schema.json  CMakePresets-v7-schema.json  CMakePresets-v8-schema.json  kits-schema.json  variants-schema.json
scripts/: ci.ps1  cmt.psm1  prepare-test.ps1  prepare_test.bat  prepare_test.sh  run_extension_tests.bat  run_extension_tests.sh  run_tests.bat  run_tests.sh  sphinx-watch.ps1  util.ps1
src/: CMakeProjectController.ts  api.ts  async.ts  backend.ts  buildOutputTerminal.ts  cMakeTaskProvider.ts  cache-edit.ts  cache-editor.ts  cache-view.ts  cache.ts  cacheView.ts  client.ts  cm-upgrade.ts  cmake-tools.ts  cmake.ts  cmakeBuildRunner.ts  cmakeBuildTaskRunner.ts  cmakeExecutable.ts  cmakeListsModifier.ts  cmakeParser.ts  cmakeProject.ts  cmakeTaskProvider.ts  cmakeTools.ts  cmakeValue.ts  cmakeWorkspaceFolder.ts  cms-client.ts  cms-driver.ts  code-pages.ts  codePageTable.ts  colorize.ts  common.ts  compdb.ts  compilationDatabase.ts  config.ts  contextKeyExpr.ts  coverage.ts  cpack.ts  cppTools.ts  cpptools.ts  ctest.ts  (+58 more)
syntaxes/: CMake.tmLanguage  CMake.tmLanguage.json  CMakeCache.tmLanguage.json
test/: CMakeLists.txt  extension.test.ts  index.ts  test-helpers.ts  test_compdb.json  test_environment.bat  test_environment.sh  test_helpers.ts  test_kit.json  util.ts
test/end-to-end-tests/single-root-UI/project-folder/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json
test/end-to-end-tests/single-root-UI/project-folder/include/: IncludedPresets1.json  IncludedPresets2.json
test/end-to-end-tests/single-root-ctest/project-folder/: CMakeLists.txt  CMakePresets.json  generate_output_file.cpp  get_test_dir.h.in  main.cpp  test.cpp.in  test_a.cpp  test_b.cpp  test_utils.cpp  test_utils.h  tests_cleanup.cpp
test/end-to-end-tests/single-root-ctest/project-folder/cmake/: RegisterTest.cmake
test/extension-tests/successful-build/project-folder/: CMakeLists.txt  cmakelists.txt  main.cpp  test-toolchain.cmake
test/extension-tests/vs-preferred-gen/project-folder/: CMakeLists.txt  main.cpp
test/fakeOutputGenerator/: CMakeLists.txt  main.cpp
test/fakeOutputGenerator/configfiles/: clang-0.25.cfg  clang-8.1.0.cfg  cross-compile-gcc.cfg  cross-compile-gdb.cfg  gcc-42.1.cfg  gcc-666.cfg  lldb-mi.cfg  lldb.cfg  mingw32-gcc.cfg  mingw32-make.cfg
test/test_project/: CMakeLists.txt  another.cpp  main.cpp
test/unit-tests/driver/workspace/test_project/: CMakeLists.txt  toolchain-no-args.cmake  toolchain-with-args.cmake
test/unit-tests/driver/workspace/test_project/shared_lib_dummy/: CMakeLists.txt
test/unit-tests/driver/workspace/test_project/shared_lib_dummy/inc/: info.h
test/unit-tests/driver/workspace/test_project/shared_lib_dummy/src/: info.c
test/unit-tests/driver/workspace/test_project/static_lib_dummy/: CMakeLists.txt
test/visual-syntax-test/: CMakeLists.txt
tools/: generate-settings-docs.js
types/: follow-redirects.d.ts
typings/: shlex.d.ts
(+1513 files in other folders)
